# ASX

./: .gitignore  ASX-daily-capture.sh  ASX-rate-tracker-reporting.ipynb  README.md  asx_daily_data_capture.py  pyproject.toml
ASX-COMBINED/: ASX-COMBINED.csv
ASX_DAILY_DATA/: scraped_cash_rate_2024-05-06.csv  scraped_cash_rate_2024-05-10.csv  scraped_cash_rate_2024-05-13.csv  scraped_cash_rate_2024-05-16.csv  scraped_cash_rate_2024-05-17.csv  scraped_cash_rate_2024-05-20.csv  scraped_cash_rate_2024-05-21.csv  scraped_cash_rate_2024-05-22.csv  scraped_cash_rate_2024-05-23.csv  scraped_cash_rate_2024-05-24.csv  scraped_cash_rate_2024-05-27.csv  scraped_cash_rate_2024-05-28.csv  scraped_cash_rate_2024-05-29.csv  scraped_cash_rate_2024-05-30.csv  scraped_cash_rate_2024-05-31.csv  scraped_cash_rate_2024-06-03.csv  scraped_cash_rate_2024-06-04.csv  scraped_cash_rate_2024-06-05.csv  scraped_cash_rate_2024-06-06.csv  scraped_cash_rate_2024-06-07.csv  scraped_cash_rate_2024-06-10.csv  scraped_cash_rate_2024-06-11.csv  scraped_cash_rate_2024-06-12.csv  scraped_cash_rate_2024-06-13.csv  scraped_cash_rate_2024-06-14.csv  scraped_cash_rate_2024-06-17.csv  scraped_cash_rate_2024-06-18.csv  scraped_cash_rate_2024-06-19.csv  scraped_cash_rate_2024-06-20.csv  scraped_cash_rate_2024-06-21.csv  scraped_cash_rate_2024-06-24.csv  scraped_cash_rate_2024-06-25.csv  scraped_cash_rate_2024-06-26.csv  scraped_cash_rate_2024-06-28.csv  scraped_cash_rate_2024-07-01.csv  scraped_cash_rate_2024-07-02.csv  scraped_cash_rate_2024-07-03.csv  scraped_cash_rate_2024-07-04.csv  scraped_cash_rate_2024-07-05.csv  scraped_cash_rate_2024-07-08.csv  (+447 more)
